discussion/kv_engine/172444/172444_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51373: Inspect and correct Item objects created by KVStore

Create a function that Couch/Magma-KVStore should call when
they have created an Item from the underlying stored data.
The function inspects the Item for datatype anomalies and if
found logs and corrects the Item preventing exceptions
occurring further up the stack.

In this case we check for an Item with no value, but a datatype,
which in the case of datatype=xattr can cause faults in xattr
inspection code.

Change-Id: I10b87297797c920a52a5a2e6a186b406850ae978

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-03-17 16:39:28.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-17 17:11:26.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16057/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:653:21: error: no member named "UserDataView" in namespace "cb" [clang-diagnostic-error]
                cb::UserDataView(ss.str()).getSanitizedValue());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:274:49: note: expanded from macro "EP_LOG_WARN"
    EP_LOG_FMT(spdlog::level::level_enum::warn, __VA_ARGS__)
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:235:58: note: expanded from macro "EP_LOG_FMT"
            logger->log(severity, CHECK_FMT_STRING(fmt), __VA_ARGS__); \
                                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16057/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:653:21:
error: no member named "UserDataView" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16057/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44511/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [8/93]: test dcp noop failure...(49 ms) OK


99% tests passed, 2 tests failed out of 426

Total Test time (real) = 349.56 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44511/ )

Failure of GoogleTest "CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.vb_promotion_update_manifest_dead/persistent_nexus_couchstore_magma_full_eviction":

<pre>
[ RUN      ] CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.vb_promotion_update_manifest_dead/persistent_nexus_couchstore_magma_full_eviction
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(601): error: Expected equality of these values:
  cb::engine_errc::success
    Which is: success
  mock_waitfor_cookie(c)
    Which is: cannot_apply_collections_manifest
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(604): error: Expected equality of these values:
  cb::engine_errc::success
    Which is: success
  status
    Which is: would block
..\kv_engine\engines\ep\tests\module_tests\collections\evp_store_collections_dcp_test.cc(1278): error: Value of: active->lockCollections().exists(CollectionEntry::fruit)
  Actual: false
Expected: true
[  FAILED  ] CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.vb_promotion_update_manifest_dead/persistent_nexus_couchstore_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=nexus:nexus_primary_backend=couchstore:nexus_secondary_backend=magma:item_eviction_policy=full_eviction" (63 ms)
CollectionsDcpEphemeralOrPersistent/CollectionsDcpParameterizedTest.vb_promotion_update_manifest_dead/persistent_nexus_couchstore_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44511/ )

Timeout of a CTest test 426/426 Test #293: ep_testsuite_dcp.full_eviction.comp_passive ...................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44511/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37472/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:653:21:
error: no member named "UserDataView" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37472/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16896/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16896/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14977/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17825/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26232/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5714/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18146/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5772/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18857/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
